--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.2.0/css/zocial.min.css" rel="stylesheet">
-	<script src="scripts/home.js"></script>
+	<script src="scripts/index.js"></script>
 </head>
 <body>
 	<div class="menu-bar">
@@ -16,9 +16,11 @@
 				<h3>Galleria</h3>
 				<div class="button-wrapper">
 				<% if (!user) { %>
-				<a id="login-button" class="zocial twitter">Login</a>
+				<a href="/login" id="login-button" class="zocial twitter">Login</a>
 				<% } else { %>
-				<button>Welcome user</button>
+				<button class="generic-button">Add gallerite</button>
+				<button class="generic-button">My gallerites</button>
+				<button class="danger-button">Logout</button>
 				<% } %>
 				</div>
 			</div>
