--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 				<% } else { %>
 				<button class="generic-button">Add gallerite</button>
 				<button class="generic-button">My gallerites</button>
-				<button class="danger-button">Logout</button>
+				<a href="/login/logout"><button class="danger-button">Logout</button></a>
 				<% } %>
 				</div>
 			</div>
