Style: Added hover properties to button mixin.
The cursor is set to pointer upon hovering a button.

--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -33,6 +33,9 @@ body {
 	} @elseif $type == generic {
 		background-color: $generic-button-bk-color;
 	}
+	&:hover {
+		cursor: pointer;
+	}
 }
 
 $buttons: generic danger;
