Refactor: Changed instruction note for user when entering youtube link.
Changed from asking to enter embed link to the page's link.

--- a/views/addGallerite.ejs
+++ b/views/addGallerite.ejs
@@ -42,7 +42,7 @@
 		<div class="gallerite-type">
 			<p class="type-header">YouTube Video</p>
 			<form class="new-gallerite-form" action="/addGallerite" method="post">
-				<p>Embed URL (Found in share menu in video's page):</p>
+				<p>Video's URL (video's YouTube page):</p>
 				<input type="hidden" name="type" value="youtube">
 				<input class="link-input" placeholder="Enter embed URL" name="link" required>
 				<p>Description:</p>
