Feat: Gallerite type is checked before inserting the gallerite into the page.
Different gallerite types result in different handeling for each type.
Image gallerite inserts an image, youtube gallerite embeds a video, article gallerite will add a placeholder image.
An if statement checks the gallerite type and takes action accordingly.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,11 @@
 		<% } else { %>
 		<% for (var gallerite in gallerites) { %>
 		<div class="gallerite">
+			<% if (gallerites[gallerite].type == "image") { %>
 			<img src=<%= gallerites[gallerite].url %>>
+			<% } else if (gallerites[gallerite].type == "youtube") { %>
+			<iframe width="560" height="315" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
+			<% } %>
 			<p><%= gallerites[gallerite].description %></p>
 			<p><%= gallerites[gallerite].addedBy.name %></p>
 			<img src=<%= gallerites[gallerite].addedBy.imageLink %>>
