--- a/views/addGallerite.ejs
+++ b/views/addGallerite.ejs
@@ -26,7 +26,7 @@
 		<% if (message) { %>
 		<span class="error-message"><%= message %></span>
 		<% } %>
-		<p>Select your gallerite's type and then enter its information and submit.</p><hr>
+		<p>Select your gallerite's type and then enter its information and submit.</p><hr class="main-hr">
 		<div class="gallerite-type">
 			<p class="type-header">Image</p>
 			<form class="new-gallerite-form" action="/addGallerite" method="post">
