--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -177,6 +177,10 @@ input {
 	margin-right: 5px;
 }
 
+.article-icon {
+	width: 100px !important;
+}
+
 .footer {
 	font-size: 0.8em;
 	color: $section-font-color;
