Feat: Enclosed title header at menu bar with link to home page.

--- a/views/addGallerite.ejs
+++ b/views/addGallerite.ejs
@@ -12,7 +12,7 @@
 	<div class="menu-bar">
 		<div class="sizer">
 			<div class="space-between-wrapper">
-				<h3>Galleria</h3>
+				<a href="/" class="emblem-link"><h3>Galleria</h3></a>
 				<div class="button-wrapper">
 				<a href="/"><button class="generic-button">Home</button></a>
 				<a href="/myGallerites"><button class="generic-button">My gallerites</button></a>
