--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 	<div class="menu-bar">
 		<div class="sizer">
 			<div class="space-between-wrapper">
-				<h3>Galleria</h3>
+				<a href="/" class="emblem-link"><h3>Galleria</h3></a>
 				<div class="button-wrapper">
 				<% if (!user) { %>
 				<a href="/login" id="login-button" class="zocial twitter">Login</a>
