Style: Styled the header link in menu bar.

--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -187,6 +187,11 @@ input {
 	width: 100px !important;
 }
 
+.emblem-link {
+	text-decoration: none;
+	color: $section-font-color;
+}
+
 .footer {
 	font-size: 0.8em;
 	color: $section-font-color;
