--- a/views/stylesheets/screen.css
+++ b/views/stylesheets/screen.css
@@ -221,6 +221,12 @@ input {
 }
 
 /* line 190, ../sass/screen.scss */
+.emblem-link {
+  text-decoration: none;
+  color: #404040;
+}
+
+/* line 195, ../sass/screen.scss */
 .footer {
   font-size: 0.8em;
   color: #404040;
@@ -229,14 +235,14 @@ input {
   opacity: 0.9;
   padding: 5px;
 }
-/* line 197, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .footer ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-/* line 203, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 .footer a {
   color: #404040;
 }
