Style: Styled the delete button in myGallerites page.

--- a/views/stylesheets/screen.css
+++ b/views/stylesheets/screen.css
@@ -181,14 +181,14 @@ input {
 }
 
 /* line 156, ../sass/screen.scss */
-.like-button, .explore-button, .unlike-button {
+.like-button, .explore-button, .unlike-button, .delete-button {
   color: white;
   border: none;
   border-radius: 3px;
   padding: 5px;
 }
 /* line 161, ../sass/screen.scss */
-.like-button:hover, .explore-button:hover, .unlike-button:hover {
+.like-button:hover, .explore-button:hover, .unlike-button:hover, .delete-button:hover {
   cursor: pointer;
 }
 
@@ -198,35 +198,44 @@ input {
 }
 
 /* line 170, ../sass/screen.scss */
-.explore-button {
+.explore-button, .delete-button {
   margin-top: 5px;
-  background-color: #373F51;
   width: 100%;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
+.explore-button {
+  background-color: #373F51;
+}
+
+/* line 179, ../sass/screen.scss */
+.delete-button {
+  background-color: #F05D5E;
+}
+
+/* line 183, ../sass/screen.scss */
 .unlike-button {
   background-color: #F05D5E;
 }
 
-/* line 181, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
   margin-right: 5px;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .article-icon {
   width: 100px !important;
 }
 
-/* line 190, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 .emblem-link {
   text-decoration: none;
   color: #404040;
 }
 
-/* line 195, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .footer {
   font-size: 0.8em;
   color: #404040;
@@ -235,14 +244,14 @@ input {
   opacity: 0.9;
   padding: 5px;
 }
-/* line 202, ../sass/screen.scss */
+/* line 209, ../sass/screen.scss */
 .footer ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-/* line 208, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 .footer a {
   color: #404040;
 }
