--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -153,7 +153,7 @@ input {
 	justify-content: space-between;
 }
 
-.like-button, .explore-button, .unlike-button {
+.like-button, .explore-button, .unlike-button, .delete-button {
 	color: white;
 	border: none;
 	border-radius: 3px;
@@ -167,10 +167,17 @@ input {
 	background-color: $ok-button-bk-color;
 }
 
-.explore-button {
+.explore-button, .delete-button {
 	margin-top: 5px;
-	background-color: $generic-button-bk-color;
 	width: 100%;
+}
+
+.explore-button {
+	background-color: $generic-button-bk-color;
+}
+
+.delete-button {
+	background-color: $danger-button-bk-color;
 }
 
 .unlike-button {
