Style: Styled user-info div.
div appears in a user's page.

--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -199,6 +199,10 @@ input {
 	color: $section-font-color;
 }
 
+.user-info {
+	text-align: center;
+}
+
 .footer {
 	font-size: 0.8em;
 	color: $section-font-color;
