--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -7,6 +7,7 @@ $danger-button-bk-color: #F05D5E;
 $ok-button-bk-color: #0F7173;
 $type-header-bk-color: gray;
 $type-header-font-color: white;
+$info-bk-color: #D6D6D6;
 
 * {
 	margin: 0;
@@ -199,8 +200,77 @@ input {
 	color: $section-font-color;
 }
 
-.user-info {
+.user-info, .gallerite-info {
 	text-align: center;
+}
+
+.info-entry {
+	background-color: $info-bk-color;
+	width: 300px;
+	margin: 0 auto;	
+	margin-top: 10px;
+	padding: 5px;
+	border-radius: 5px;
+	a {
+		color: $section-font-color;
+	}
+}
+
+.like-user {
+	width: 100%;
+	background-color: $info-bk-color;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 5px;
+	color: $section-font-color;
+	text-decoration: none;
+	border-radius: 5px;
+	margin-bottom: 5px;
+	img {
+		width: 30px;
+		height: 30px;
+		margin-right: 10px;
+	}
+}
+
+#explore-image {
+	max-width: 300px;
+	&:hover {
+		cursor: zoom-in;
+	}
+}
+
+.zoomed-image {
+	display: none;
+	text-align: center;
+	position: absolute;
+	z-index: 2;
+	padding: 20px;
+}
+
+.layer {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0; 
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index: 1;
+	opacity: 0.85;
+	padding: 0;
+}
+
+.original-image {
+	&:hover {
+		cursor: zoom-out;
+	}
+}
+
+.stop-scrolling {
+	height: 100%;
+	overflow-y: hidden;
 }
 
 .footer {
