Feat: Tags field now a required input.
Regardless of the gallerite's type. The user now needs to enter tags to help search gallerites.
Tags should be seperated by commas.

--- a/views/addGallerite.ejs
+++ b/views/addGallerite.ejs
@@ -35,6 +35,8 @@
 				<input class="link-input" placeholder="Enter link" name="link" required>
 				<p>Description:</p>
 				<input placeholder="Enter description" name="description" required><br/>
+				<p>Tags</p>
+				<input placeholder="Enter tags (seperated by commas)" name="tags" required><br/>
 				<button type="submit" class="ok-button">Add</button>
 				<button class="danger-button cancel">Cancel</button>
 			</form>
@@ -47,6 +49,8 @@
 				<input class="link-input" placeholder="Enter embed URL" name="link" required>
 				<p>Description:</p>
 				<input placeholder="Enter description" name="description" required><br/>
+				<p>Tags</p>
+				<input placeholder="Enter tags (seperated by commas)" name="tags" required><br/>
 				<button type="submit" class="ok-button">Add</button>
 				<button class="danger-button cancel">Cancel</button>
 			</form>
@@ -59,6 +63,8 @@
 				<input class="link-input" placeholder="Enter article's URL" name="link" required>
 				<p>Description:</p>
 				<input placeholder="Enter description" name="description" required><br/>
+				<p>Tags</p>
+				<input placeholder="Enter tags (seperated by commas)" name="tags" required><br/>
 				<button type="submit" class="ok-button">Add</button>
 				<button class="danger-button cancel">Cancel</button>
 			</form>
