--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,6 +10,8 @@
 	<link href="http://weloveiconfonts.com/api/?family=fontawesome" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<!-- Call to index.js not search.js... Both are exactly the same. No search.js is created. -->
+	<script src="/scripts/index.js"></script>
 </head>
 <body>
 	<div class="menu-bar">
@@ -17,6 +19,7 @@
 			<div class="space-between-wrapper">
 				<a href="/" class="emblem-link"><h3>Galleria</h3></a>
 				<div class="button-wrapper">
+				<a href="/"><button class="generic-button">Home</button></a>
 				<% if (!user) { %>
 				<a href="/login" id="login-button" class="zocial twitter">Login</a>
 				<% } else { %>
